@@ -31,6 +31,7 @@ if (is_ajax ()) {
 	$get_agent_modules_json = (bool) get_parameter ('get_agent_modules_json');
 	$get_agent_status_tooltip = (bool) get_parameter ("get_agent_status_tooltip");
 	$get_agents_group_json = (bool) get_parameter ("get_agents_group_json");
+	$get_agent_modules_json_for_multiple_agents = (bool) get_parameter("get_agent_modules_json_for_multiple_agents");
 
 	if ($get_agents_group_json) {
 		$id_group = get_parameter('id_group');
@@ -47,6 +48,20 @@ if (is_ajax ()) {
 		$agent = get_db_row ('tagente', 'id_agente', $id_agent);
 		
 		echo json_encode ($agent);
+		return;
+	}
+	
+	if ($get_agent_modules_json_for_multiple_agents) {
+		$idAgents = get_parameter('id_agent');
+		
+		$nameModules = get_db_all_rows_sql('SELECT DISTINCT(nombre) FROM tagente_modulo WHERE id_agente IN (' . implode(',', $idAgents) . ')');
+		
+		$result = array();
+		foreach($nameModules as $nameModule) {
+			$result[] = $nameModule['nombre'];
+		}
+		
+		echo json_encode($result);
 		return;
 	}
 
