@@ -1,5 +1,14 @@
 2010-04-22 Miguel de Dios  <miguel.dedios@artica.es>
 
+	* include/javascript/pandora.js: added function
+	"agent_changed_by_multiple_agents" for query ajax with one or more agent
+	select.
+	
+	* operation/agentes/ver_agente.php: added ajax response to
+	"get_agent_modules_json_for_multiple_agents".
+
+2010-04-22 Miguel de Dios  <miguel.dedios@artica.es>
+
 	* include/javascript/tiny_mce/*: re-added (lost files) js library (BSD) for
 	the eyecandy widget for textarea. 
 
